[gd_scene load_steps=19 format=3 uid="uid://cqp6h5tv84tre"]

[ext_resource type="Script" uid="uid://bxhkx24n73ja3" path="res://src/player_controller.gd" id="1_3vyb7"]
[ext_resource type="PackedScene" uid="uid://b4tbqmau8gei7" path="res://scenes/objects/chipped_sword_1.tscn" id="2_g2els"]
[ext_resource type="Script" uid="uid://b152iatks744d" path="res://src/melee_controller.gd" id="2_qhqgy"]
[ext_resource type="Script" uid="uid://c36rn1egjwxi2" path="res://src/reticle.gd" id="5_fjrip"]
[ext_resource type="Shader" uid="uid://gh3w1tb6k0oa" path="res://src/shaders/pixel_dither.gdshader" id="5_smehm"]
[ext_resource type="AudioStream" uid="uid://cpqaoi03s42l5" path="res://assets/audio/weapon_swing_1.mp3" id="5_tuyoq"]
[ext_resource type="Texture2D" uid="uid://ltkmrf10jtif" path="res://assets/textures/totems_palette_1x.png" id="6_c5rqy"]
[ext_resource type="AudioStream" uid="uid://0makxdginfhr" path="res://assets/audio/weapon_swing_2.mp3" id="6_fjrip"]
[ext_resource type="FontFile" uid="uid://bxdawle5mfna8" path="res://assets/fonts/RasterForgeRegular-JpBgm.ttf" id="7_c5rqy"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_qhqgy"]
size = Vector3(0.3, 0.3, 1.20039)

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/WeaponPivot/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.283224, -0.421267, -0.275886)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/WeaponPivot/Hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.1139, 4.46986e-16, 1.5708)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraPivot/WeaponPivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "weapon_attack_1"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/WeaponPivot/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0.283, -0.17704, -0.330747), Vector3(0.283, -0.501, -0.276)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/WeaponPivot/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0.1139, 4.46986e-16, 1.5708), Vector3(-1.82387, 0, 1.5708)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/WeaponPivot:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.349066, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qlg0r"]
resource_name = "weapon_attack_2"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector3(-0.349066, 0, -1.35088), Vector3(0, 2.35619, -1.35088)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/WeaponPivot/Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector3(0.422829, 0.203546, -0.369242)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/WeaponPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0859735, 0)]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "weapon_idle"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/WeaponPivot/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.283224, -0.421267, -0.275886), Vector3(0.283, -0.47, -0.276)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/WeaponPivot/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.13333),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.1139, 4.46986e-16, 1.5708), Vector3(0.0523599, 0, 1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"weapon_attack_1": SubResource("Animation_dqkch"),
&"weapon_attack_2": SubResource("Animation_qlg0r"),
&"weapon_idle": SubResource("Animation_g2els")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ur7pv"]
shader = ExtResource("5_smehm")
shader_parameter/palette = ExtResource("6_c5rqy")
shader_parameter/dithering = true
shader_parameter/dithering_size = 2
shader_parameter/resolution_scale = 2
shader_parameter/quantization_level = 16

[sub_resource type="LabelSettings" id="LabelSettings_b6tgf"]
font = ExtResource("7_c5rqy")
font_size = 22
font_color = Color(0.903598, 0.903598, 0.903598, 1)
shadow_size = 2
shadow_color = Color(0.111197, 0.111197, 0.111197, 1)
shadow_offset = Vector2(2, 1)

[node name="Player" type="CharacterBody3D"]
floor_max_angle = 1.0472
script = ExtResource("1_3vyb7")
mouse_sensitivity = 0.003

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera" type="Camera3D" parent="CameraPivot"]
fov = 80.0

[node name="InteractionRayCast" type="RayCast3D" parent="CameraPivot/Camera"]
target_position = Vector3(0, 0, -2)

[node name="Hitbox" type="Area3D" parent="CameraPivot/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.3699)
monitoring = false
monitorable = false

[node name="HitboxCollider" type="CollisionShape3D" parent="CameraPivot/Camera/Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.399854)
shape = SubResource("BoxShape3D_qhqgy")

[node name="WeaponPivot" type="Node3D" parent="CameraPivot"]
script = ExtResource("2_qhqgy")

[node name="Hand" type="Node3D" parent="CameraPivot/WeaponPivot"]
transform = Transform3D(-3.61999e-06, -1, 4.44089e-16, 0.993519, -3.59653e-06, -0.113654, 0.113654, -4.11426e-07, 0.99352, 0.283224, -0.421267, -0.275886)

[node name="ChippedSword1" parent="CameraPivot/WeaponPivot/Hand" instance=ExtResource("2_g2els")]

[node name="OmniLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39803, 0)
light_color = Color(0.71, 0.62125, 0.1775, 1)
light_energy = 3.0
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}
autoplay = "weapon_idle"
playback_default_blend_time = 0.1

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PixelDitherShaderRect" type="ColorRect" parent="UserInterface"]
material = SubResource("ShaderMaterial_ur7pv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Reticle" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
script = ExtResource("5_fjrip")
reticle_color = Color(1, 1, 1, 0.705882)

[node name="InteractionLabel" type="Label" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = -11.0
offset_right = 193.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "[E] Activate"
label_settings = SubResource("LabelSettings_b6tgf")
vertical_alignment = 1

[node name="WeaponSwing1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tuyoq")

[node name="WeaponSwing2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fjrip")

[connection signal="area_entered" from="CameraPivot/Camera/Hitbox" to="CameraPivot/WeaponPivot" method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="CameraPivot/WeaponPivot" method="_on_animation_finished"]
